--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body, html {
   
   .bgimg {
     /* Background image */
-    background-image: url("Denver.jpg");
+    background-image: url("IMG_2458.jpg");
     /* Full-screen */
     height: 100%;
     /* Center the background image */
@@ -20,7 +20,7 @@ body, html {
     font-family: "Courier New", Courier, monospace;
     /* Set the font-size to 25 pixels */
     font-size: 25px;
-    opacity: .5;
+    opacity: .75;
   }
   
   /* Position text in the top-left corner */
